# agent-hub

./: .gitignore  Cargo.toml  README.md  agents.md  build.bat  claude.md  dev.bat  index.html  package-lock.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
docs/: sidex-terminal-architecture.md  terminal-design-reference.md  terminal-issues-log.md  zed-design-reference.md  zed-terminal-architecture.md
docs/superpowers/plans/: 2026-07-14-workspace-persistence-plan.md
docs/superpowers/specs/: 2026-07-14-workspace-persistence-design.md
src/: App.css  App.tsx  index.css  main.rs  memory.rs  show-window.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent.rs  commands.rs  files.rs  ipc.rs  main.rs  settings.rs  terminal.rs
src-tauri/src/agents/: claude.rs  kimi.rs  mimo.rs  mod.rs
src-tauri/src/workspace/: mod.rs
src/agents/: claude.rs  kimi.rs  mimo.rs  mod.rs
src/cli/: history.rs  ipc.rs  list.rs  memory.rs  mod.rs  search.rs  send.rs  show.rs  status.rs
src/components/: ChatView.css  ChatView.tsx  ConfirmDialog.css  ConfirmDialog.tsx  EmbeddedTerminal.css  EmbeddedTerminal.tsx  ErrorBoundary.tsx  FilePanel.css  FilePanel.tsx  FileViewer.css  FileViewer.tsx  ProjectInfo.css  ProjectInfo.tsx  Sidebar.css  Sidebar.tsx  TerminalTabs.css  TerminalTabs.tsx
src/hooks/: useAgentProfiles.ts  useWorkspaceState.ts
src/types/: agent.ts
