[package]
name = "agent-hub-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = [ "window-all", "shell-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
portable-pty = "0.9"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
